2003-10-27  Stipe Tolj  <tolj@wapme-systems.de>
    * wap/cookies.c: fixed BUG#95 causing wapbox to crash while comparing 
      cookies octstr_compare(). 

2003-10-27  Alexander Malysh  <a.malysh@centrium.de>
    * gw/bb_http.c: small bug fix. Allow http admin commands w/o /cgi-bin/ prefix
      (e.g. /status).

2003-10-26  Alexander Malysh  <a.malysh@centrium.de>
    * gw/bearerbox.c: applied patch that should fix bearerbox signal handling.
      Otherwise is a deadlock possible while signal arrived. For more details see
      Msg-Id: <200310130000.34055.a.malysh@centrium.de>

2003-10-26  Alexander Malysh  <a.malysh@centrium.de>
    * gw/bb_http.c: cleanup and harmonization of http admin commands.

2003-10-24  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/conn.c: added check for NULL pointer callback function.
    * gwlib/http.c: call conn_unregister(conn) before destroing HTTPClient.

2003-10-22  Alexander Malysh  <a.malysh@centrium.de>
    * gw/wml_compiler.c: fixed possible segfault if wml document doesn't contain
      DTD section. Thanks to Vjacheslav Chekushin <slava@lmt.lv> for patch.
      Msg-Id: <3F95203C.60402@lmt.lv>

2003-10-22  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/http.c: applied patch from bug #78.

2003-10-20  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/accesslog.c, gwlib/gwlib.c, gwlib/log.[ch]: applied alog-log-rc-reopen.diff patch.
      This patch should fix race conditions in the accesslog and log module while reopening 
      of log files. Patch just add reader/writer lock and make sure that writer are locked
      while reopening of log files, plus adds log_shutdown(..) function in order to proper
      close log files.

2003-10-20  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_http.c: added forwarding of 'binfo' CGI variable in Kannel
      type.
    * gw/smsbox.c: added X-Kannel-BInfo header for sms-service.
      Thanks to Adi Prasaja <adi@imt.co.id> for this patch.